UI: Fix the download dropdown menu wraps at the edge of the window

--- a/js/css/common.css
+++ b/js/css/common.css
@@ -62,6 +62,7 @@
 .dropdown-item {
   cursor: pointer;
   padding: 0.7em;
+  white-space: nowrap;
 
   &:active {
     transform: translateY(2px);
